--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,23 @@
 asgiref==3.7.2
+Babel==2.14.0
+crispy-bootstrap5==2023.10
 Django==5.0
+django-crispy-forms==2.1
+docxcompose==1.4.0
+docxtpl==0.16.7
+et-xmlfile==1.1.0
+install==1.3.5
+Jinja2==3.1.2
+lxml==5.0.0
+MarkupSafe==2.1.3
+numpy==1.26.3
+openpyxl==3.1.2
+pandas==2.1.4
+python-dateutil==2.8.2
+python-docx==1.1.0
+pytz==2023.3.post1
+six==1.16.0
 sqlparse==0.4.4
+tqdm==4.66.1
 typing_extensions==4.9.0
+tzdata==2023.4
