--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Babel==2.14.0
 crispy-bootstrap5==2023.10
 Django==5.0
 django-crispy-forms==2.1
+docx2pdf==0.1.8
 docxcompose==1.4.0
 docxtpl==0.16.7
 et-xmlfile==1.1.0
